css/style.css
/*

 __   __                                 _         _ _   _ 
 \ \ / /__  _   _    _ __ ___   __ _  __| | ___   (_) |_| |
  \ V / _ \| | | |  | '_ ` _ \ / _` |/ _` |/ _ \  | | __| |
   | | (_) | |_| |  | | | | | | (_| | (_| |  __/  | | |_|_|
   |_|\___/ \__,_|  |_| |_| |_|\__,_|\__,_|\___|  |_|\__(_)
                                                          
	WELCOME TO MY CSS FILE!

	Here you will learn all about my "unique" ideas for
	how to use styles to make this site work better.

	I've highlighted what I think are the most interesting
    bits of CSS with this symbol:

          /\
       __/\/\__
     /__/\!!/\__\
     \ -\/!!\/- /
        -\/\/-
          \/

/*	Scroll down, and enjoy!

/* NORMALIZATION */
html, body {
  margin: 0;
  padding: 0;
  font-size: 16px;
  overflow-x: hidden;
}
a {
  color: inherit;
  text-decoration: none;
}
ul {
  margin: 0;
  padding-left: 1rem;
}



/* TYPOGRAPHY */

/* Mobile type sizes*/
header, main, footer {
  font-family: "Merriweather", serif;
  font-display: optional;
  color: #04060A;
  line-height: 1.75;
}
/*
	  /\
   __/\/\__ 	WTF IS THIS, Y U NO SET THIS ON BODY
 /__/\!!/\__\
 \ -\/!!\/- /	I am setting not setting the main font settings on
    -\/\/-		the body element. Why?  I actually am using an 8pt
      \/		grid system, so I want to keep the base font size
      			(1rem) a multiple of 8.  I left it at 16px because
      			it's a sane font size, but now I can change the size
      			of the main text independently of the "rem" unit,
      			which I use EXTENSIVELY for layout throught this doc.
*/


h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
  margin: 8px 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-display:optional;
}
h1, .h1 {
  font-size: 2.5rem;
  font-weight: 200;
  letter-spacing: -0.05rem;
  line-height: 1.25;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
h2, .h2 {
  font-size: 1.875rem;
  font-weight: 200;
  line-height: 1.29;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
h3, .h3 {
  font-size: 1.375rem;
  font-weight: 200;
  line-height: 1.25;
}
h4, .h4 {
  font-size: 1rem;
  font-weight: 700;
  letter-spacing: 0.1875rem;
  line-height: 1.75;
  text-transform: uppercase;
}
h5, .h5, figcaption {
  font-size: 0.73rem;
  letter-spacing: 0.016rem;
  line-height: 1.5rem;
}
h6, .h6 {
  font-size: 0.54rem;
  letter-spacing: 0.063rem;
  line-height: 1.5rem;
}
p, figure {
	margin: 0;
	margin-bottom: 1.5rem;
}
hr {
    margin: 1rem 0;
    width: 100%;
    height: 0px;
    outline: none;
    border: none;
    border-bottom: 1px solid #EAEBED;
}

@media only screen and (min-width: 48em) {
/*									^
									|
	  /\							|
   __/\/\__     ____________________|
 /__/\!!/\__\
 \ -\/!!\/- /	GET USED TO IT PAL
    -\/\/-	
      \/		This media query is the end of mobile styles and the
      			beginning of tablet and desktop styles. Almost all of
      			my adjustments are made at this breakpoint. I chose
      			these exact breakpoints because the coincide with the
      			breakpoints of the flexbox grid system I am using.
*/
	header, main, footer {
	  font-size: 1.13rem;
	}
	h1, h2, h3, h4, h5, h6 {
	  margin: 8px 0;
	}
	h1 {
	  font-size: 4.75rem;
	  letter-spacing: -0.125rem;
	  line-height: 1.07;
	}
	h2 {
	  font-size: 2.94rem;
	  line-height: 1.15;
	  -webkit-font-smoothing: antialiased;
	  -moz-osx-font-smoothing: grayscale;
	}
	h3 {
	  font-size: 1.81rem;
	  line-height: 1.24;
	}
	h4 {
	  font-size: 1.125rem;
	  letter-spacing: 0.25rem;
	  line-height: 1.5;
	}
	h5, figcaption {
	  font-size: 0.611rem;
	  letter-spacing: 0.016rem;
	  line-height: 1.688rem;
	}
	h6 {
	  font-size: 0.389rem;
	  letter-spacing: 0.063rem;
	  line-height: 1.688rem;
	}
}

/* BUTTONS */
header nav a {
	line-height: 2rem;
	margin-top: 0.5rem;
	padding: 0 0.75rem;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
	font-size: 0.73rem;
	text-transform: uppercase;
	letter-spacing: 0.03125rem;
	display: none;
	font-weight: 700;
}
a.button {
	display: inline-block;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
	color: #fff;
	font-weight: 700;
	background: #00D9C0;
	letter-spacing: 0.03125rem;
	text-transform: uppercase;
}
a.button:after {
	content: ' \00279E';
}
a.button.medium, a.button.big {
	font-size: 0.73rem;
	letter-spacing: 0.0625rem;
	line-height: 2.5rem;
	padding: 0 2rem;
}
a.button.big {
	line-height: 3rem;
}
@media only screen and (min-width: 48em) {
	header nav a {
		display: inline-block;
		line-height: 2rem;
		padding: 0 1rem;
		margin: 1rem 0.5rem;
		font-size: 0.6875rem;
		letter-spacing: 0.0625rem;
	}
	header nav a:last-child {
		margin-left: 1rem;
		margin-right: 0;
	}
	a.button.medium, a.button.big {
		font-size: 1.125rem;
		line-height: 3rem;
	}
}

/* CONTAINERS AND LAYOUT */
.container {
	padding: 0 1rem;
	position: relative;
}
.center {
	text-align: center;
}
.hero {
	margin-top: 3rem;
	padding: 4rem 0;
}
@media only screen and (min-width: 48em) {
	.container {
		padding: 0;	
		width: 39rem;
	}
	.hero {
		margin-top: 4rem;
		padding: 8rem 0;
	}
}
@media only screen and (min-width: 64em) {
	.container {
		width: 75%;
		max-width: 64rem;
	}
}
/* ... */

